# ChemGraphs

./: .gitignore  .travis.yml  LICENSE  README.md  Untitled.ipynb  develop.sh  enviroment.yml  environment.yml  setup.cfg  setup.py  test.sh
datasets/: EstrogenDB.npz
gcnn/: __init__.py  datasets.py  features.py  io.py  losses.py  metrics.py  models.py  utils.py
gcnn/apps/: example.py  setup_dataset.py  train_gcnn.py
gcnn/data/: datasets.py
gcnn/models/: models.py
gcnn/utils/: misc.py
gnn/apps/: example.py
gnn/data/: datasets.py
notebooks/: playground.ipynb
tests/: __init__.py
tests/cram/: setup_dataset.t  train_gcnn.t  train_gcnn.t.err
tests/cram/files/: cse_model.h5  cse_train.csv  data.lz4  data.npz  data.sdf  max_model.h5  max_train.csv  model.h5  mse_model.h5  mse_train.csv  tobit_model.h5  tobit_train.csv  train.csv
tests/cram/scripts/: compare_data.py
tests/unit/: test_datasets.py  test_io.py  test_models.py
