[metadata]
name = gcnn
version = 0.0.0

[options]
packages = gcnn
python_requires = >=3.6
include_package_data = True
test_suite = tests
setup_requires = 
	setuptools
	nose>=1.0
install_requieres = 
	pytest
	scipy
	pandas>=1.1.0
	keras
	spektral
	scikit-learn
	tensorflow>=2.4
	tensorflow-addons
	tensorflow_probability
	flake8

[nosetests]
match = ^test
nocapture = true
with-doctest = True
with-coverage = True
cover-package = gcnn
cover-erase = True

[options.extras_require]
develop =
	flake8
	coverage

[coverage:run]
branch = True
omit = */__init__.py

[coverage:report]
ignore_errors = True
omit = */__init__.py

[flake8]
max-line-length = 120
exclude = .git, .eggs, __pycache__
ignore = D100,D104,D105,D205,D400,D401,W503
